--- a/404.html
+++ b/404.html
@@ -3,9 +3,14 @@
   <head><meta charset="utf-8" /></head>
   <body>
     <script>
-      // Redirect to the React app
-      var redirectPath = location.pathname.replace("/TuneTrition", "");
-      location.replace("/TuneTrition/index.html?redirect=" + redirectPath + location.search + location.hash);
+      const hasCode = location.search.includes("code=");
+      const isSpotifyAuth = location.pathname.includes("/callback") && hasCode;
+
+      if (!isSpotifyAuth) {
+        // Redirect all other 404s to index.html
+        const redirectPath = location.pathname.replace("/TuneTrition", "");
+        location.replace("/TuneTrition/index.html?redirect=" + redirectPath + location.search + location.hash);
+      }
     </script>
   </body>
 </html>
